# well_log_toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  FLEXIBLE_LOADING_SUMMARY.md  README.md  examples.py  pyproject.toml  test_filename_fix.py  test_filtered_comprehensive.py  test_naming_refactor.py  test_save_load.py  test_source_aware.py  todo.md
.github/workflows/: build-and-publish.yml  ci.yml
docs/: changelog.md  conf.py  index.md  installation.md  make.bat  quickstart.md
docs/api/: core.md  exceptions.md  index.md  io.md  manager.md  regression.md  statistics.md  visualization.md
docs/user-guide/: loading-data.md  multi-well.md  regression.md  statistics.md  visualization.md  wells-properties.md
examples/: FLEXIBLE_LOADING_SUMMARY.md  REGRESSION_EXAMPLES.py  crossplot_examples.py  demo_grouped_legends.py  demo_optimized_placement.py  examples.py
logsuite/: __init__.py  _version.py  exceptions.py  utils.py
logsuite/analysis/: __init__.py  regression.py  statistics.py  sums_avg.py
logsuite/core/: __init__.py  operations.py  property.py  well.py
logsuite/io/: __init__.py  las_file.py
logsuite/manager/: __init__.py  data_manager.py  proxy.py
logsuite/visualization/: __init__.py  crossplot.py  template.py  wellview.py
pylog/: __init__.py  _version.py
pylog/analysis/: __init__.py
pylog/core/: property.py  well.py
pylog/manager/: data_manager.py
pylog/visualization/: __init__.py  wellview.py
tests/: conftest.py  test_crossplot.py  test_crossplot_extensive.py  test_crossplot_integration.py  test_crossplot_well_colors.py  test_discrete_labels_in_legend.py  test_discrete_regression_by_color.py  test_discrete_shape_color.py  test_error_handling.py  test_extended_statistics.py  test_filename_fix.py  test_filtered_comprehensive.py  test_flexible_loading.py  test_grouped_legends.py  test_hyphen_fix.py  test_las3_support.py  test_las_export_roundtrip.py  test_lint.py  test_log_scale_labels.py  test_md_well_standardization.py  test_naming_refactor.py  test_new_features.py  test_optimized_legend_placement.py  test_overwrite.py  test_param_locking.py  test_performance.py  test_polynomial_exponential_regression.py  test_printing.py  test_project_export.py  test_property_operations.py  test_regression_alias.py  test_regression_by_color_and_shape.py  test_regression_degree_suffixes.py  test_regression_title_with_type.py  test_resample_edge_cases.py  test_save_load.py  test_source_aware.py  test_statistics.py  test_sums_avg_report.py  test_thickness_accuracy.py
well_log_toolkit/: __init__.py  _version.py  las_file.py  manager.py  property.py  statistics.py  utils.py  visualization.py  well.py
well_log_toolkit/analysis/: __init__.py  sums_avg.py
well_log_toolkit/core/: __init__.py  property.py  well.py
well_log_toolkit/io/: las_file.py
well_log_toolkit/manager/: data_manager.py  proxy.py
well_log_toolkit/visualization/: crossplot.py  wellview.py
